--- a/index.html
+++ b/index.html
@@ -9,46 +9,49 @@
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
-<body class="vcenter">
-    <div class="container " >
+<body class="vcenter ">
+    <div class="container ">
         <div>
-            <div class="row">
-                <div class="input-field col s4">
-                    <!-- <input value="10" id="first_name" type="number"> -->
-                    <select name="direction" id="first_name">
-                        <option value="5" selected>Vijf</option>
-                        <option value="10" selected>Tien</option>
-                        <option value="15" selected>Kwart</option>
-                        <option value="30">Half</option>
-                    </select>
-                    <label for="first_name">Minuut</label>
-                </div>
-                <div class="input-field col s4">
-                    <select name="direction" id="hand-direction">
-                        <option value="left" selected>Voor</option>
-                        <option value="right">Over</option>
-                    </select>
-                </div>
-                <div class="input-field col s4">
-                    <select name="direction" id="last_name">
-                        <option value="1" selected>1</option>
-                        <option value="2" selected>2</option>
-                        <option value="3" selected>3</option>
-                        <option value="4" selected>4</option>
-                        <option value="5" selected>5</option>
-                        <option value="6" selected>6</option>
-                        <option value="7" selected>7</option>
-                        <option value="8" selected>8</option>
-                        <option value="9" selected>9</option>
-                        <option value="10" selected>10</option>
-                        <option value="11" selected>11</option>
-                        <option value="12" selected>12</option>
-                    </select>
-                    <label for="last_name">Uur</label>
+                <div class="card">
+                    <div class="card-content">
+            <div class="row" style="padding-top: 30px;">
+                        <div class="input-field col s4">
+                            <!-- <input value="10" id="first_name" type="number"> -->
+                            <select name="direction" id="first_name">
+                                <option value="5" selected>Vijf</option>
+                                <option value="10" selected>Tien</option>
+                                <option value="15" selected>Kwart</option>
+                                <option value="30">Half</option>
+                            </select>
+                            <label for="first_name">Minuut</label>
+                        </div>
+                        <div class="input-field col s4">
+                            <select name="direction" id="hand-direction">
+                                <option value="left" selected>Voor</option>
+                                <option value="right">Over</option>
+                            </select>
+                        </div>
+                        <div class="input-field col s4">
+                            <select name="direction" id="last_name">
+                                <option value="1" selected>1</option>
+                                <option value="2" selected>2</option>
+                                <option value="3" selected>3</option>
+                                <option value="4" selected>4</option>
+                                <option value="5" selected>5</option>
+                                <option value="6" selected>6</option>
+                                <option value="7" selected>7</option>
+                                <option value="8" selected>8</option>
+                                <option value="9" selected>9</option>
+                                <option value="10" selected>10</option>
+                                <option value="11" selected>11</option>
+                                <option value="12" selected>12</option>
+                            </select>
+                            <label for="last_name">Uur</label>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="card">
@@ -114,6 +117,7 @@
             padding: 0;
             margin: 0;
         }
+
         .time-or {
             display: inline-block;
             text-align: center;
