create dark mode

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="icon" href="/icons/icon-128.png">
 </head>
 
-<body class="vcenter ">
+<body class="vcenter dark">
     <div class="container ">
         <div>
             <div class="card">
