fix conversion bug

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
                         case 'rightDown':
                             // over half
                             minute += 30
+                            hour--
                             break
                         case 'left':
                             minute = 60 - minute
